# vulnerable-rust-app

./: .env  Cargo.toml  README.md
src/: main.rs
