[package]
name = "vulnerable-rust-app"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "1.0"
actix-rt = "0.2"
serde = "1.0.99"
serde_json = "1.0.40"
tokio = "0.1.22"
futures = "0.1.28"
diesel = "1.4.4"
r2d2 = "0.8.5"
env_logger = "0.6.2"
log = "0.4.8"
dotenv = "0.14.1"
chrono = "0.4.7"
uuid = "0.7.4"
bcrypt = "0.5.0"
jsonwebtoken = "6.0.1"
lazy_static = "1.3.0"
regex = "1.1.9"
reqwest = "0.9.19"
serde_urlencoded = "0.5"
openssl = "0.10.24"
yaml-rust = "0.4.3"
xml-rs = "0.8.0"
hyper = "0.12.35"
rand = "0.7.0"
base64 = "0.10.1"
